--- a/speakup-installer.service
+++ b/speakup-installer.service
@@ -6,7 +6,7 @@ After=network.target
 Type=simple
 EnvironmentFile=-/etc/sysconfig/speakup-installer
 PIDFile=/var/run/speakup-installer.pid
-ExecStart=/usr/bin/speakup-installer $OPTIONS
+ExecStart=/usr/bin/speakup-installer --daemon $OPTIONS
 ExecStop=/bin/kill -9 $MAINPID
 Restart=never
 
